# iola

./: AUTHORS  CMakeLists.txt  README  README.md  TODO
doc/: CMakeLists.txt  colorscheme.txt  edl.md  edl.txt  formats.md  formats.txt  mlt.md  mlt.txt  sequencesettings.txt
doc/doxygen/: CMakeLists.txt  Doxyfile.in
doc/uml/: clip-interfaces.dia  domain-object-model.dia  gui-monitors.dia  load-clip-into-source.dia  load-sequence-into-program.dia  markers-interface.dia  model-from-gui-view.dia  sequence-interfaces.dia  settings-interfaces.dia
iola/: CMakeLists.txt  ProgramMonitor.h  TimeRuler.h  icommand.h  iunknown.h  main.cpp  string_cast.h  theme.h
iola/application/: CMakeLists.txt  get_instance.cpp  get_instance.h  iapplication.h
iola/consumer/: CMakeLists.txt  consumer_iola.cpp  consumer_iola.h
iola/dom/: CMakeLists.txt  anamorphic_element.cpp  anamorphic_element.h  audio_element.cpp  audio_element.h  bool_terminal.cpp  bool_terminal.h  clip_element.cpp  clip_element.h  clipitem_element.cpp  clipitem_element.h  depth_element.cpp  depth_element.h  dummy.cpp  dummy.h  duration_element.cpp  duration_element.h  element_factory.cpp  element_factory.h  end_element.cpp  end_element.h  fielddominance_element.cpp  fielddominance_element.h  file_element.cpp  file_element.h  height_element.cpp  height_element.h  in_element.cpp  in_element.h  integer_terminal.cpp  integer_terminal.h  iola_element.cpp  iola_element.h  ivisitor.h  media_element.cpp  media_element.h  name_element.cpp  name_element.h  ntsc_element.cpp  ntsc_element.h  (+34 more)
iola/domain/: CMakeLists.txt  iproject.h  project.cpp  project.h
iola/gui/: About.cpp  About.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Monitor.cpp  Monitor.h  ProgramMonitor.cpp  ProgramMonitor.h  SequenceSettings.cpp  SequenceSettings.h  SourceMonitor.cpp  SourceMonitor.h  TimeDisplay.cpp  TimeDisplay.h  TimeRuler.cpp  TimeRuler.h  fltk.h  gui.cpp  gui.h  icons.qrc  igui.h  imonitor.h  theme.h
iola/gui/xbm/: clear_clip.xbm  clear_in.xbm  clear_out.xbm  goto_mark_in.xbm  goto_mark_out.xbm  goto_next_edit.xbm  goto_prev_edit.xbm  mark_clip.xbm  mark_in.xbm  mark_out.xbm  pause.xbm  play_fwd.xbm  play_rev.xbm  step_fwd.xbm  step_rev.xbm
iola/model/: CMakeLists.txt  audio_settings.cpp  audio_settings.h  clip.cpp  clip.h  file.cpp  file.h  iasset.h  iaudio_characteristics.h  iaudio_settings.h  iclip.h  iclip_reader.h  iclip_writer.h  iconsumable.h  ifile.h  ifile_characteristics.h  iloadable.h  imarkable.h  imarker_characteristics.h  imarkers.h  imodel.h  iola_clip_reader.cpp  iola_clip_reader.h  iola_clip_writer.cpp  iola_clip_writer.h  iola_sequence_reader.cpp  iola_sequence_reader.h  iola_sequence_writer.cpp  iola_sequence_writer.h  iplayable.h  iplayhead.h  iprogram.h  iproject.h  isavable.h  isequence.h  isequence_reader.h  isequence_writer.h  isource.h  ivideo_characteristics.h  ivideo_settings.h  (+16 more)
iola/xml/: CMakeLists.txt  element.cpp  element.h  element_factory.cpp  element_factory.h  ielement.h  ifactory.h  ivisitor.h  parser.cpp  parser.h
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Monitor.cpp  Monitor.h  ProgramMonitor.cpp  ProgramMonitor.h  SourceMonitor.cpp  SourceMonitor.h  TimeRuler.cpp  TimeRuler.h  fltk.h  main.cpp  theme.h
src/dom/: audio_element.cpp  audio_element.h  clipitem_element.cpp  clipitem_element.h  integer_terminal.cpp  integer_terminal.h  iola_element.cpp  iola_element.h  media_element.cpp  media_element.h  pathurl_element.cpp  pathurl_element.h  root.cpp  root.h  sequence_element.cpp  sequence_element.h  start_element.cpp  start_element.h  string_terminal.cpp  string_terminal.h  track_element.cpp  track_element.h  video_element.cpp  video_element.h
src/xml/: element.cpp  element.h  ielement.h
templates/: dom_bool.cpp  dom_bool.h  dom_bool_terminal.cpp  dom_bool_terminal.h  dom_element.cpp  dom_element.h  dom_integer.cpp  dom_integer.h  dom_integer_terminal.cpp  dom_integer_terminal.h  dom_string.cpp  dom_string.h  dom_string_terminal.cpp  dom_string_terminal.h  scaffolding.sh
