PROJECT(IOLA)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_HAS_SORT 1)

# Set the Iola version
SET(IOLA_MAJOR_VERSION 0)
SET(IOLA_MINOR_VERSION 0)

SET(IOLA_PACKAGE iola)
SET(IOLA_VERSION ${IOLA_MAJOR_VERSION}.${IOLA_MINOR_VERSION})
SET(IOLA_HOST ${CMAKE_SYSTEM} ${CMAKE_SYSTEM_PROECESSOR})
SET(IOLA_COPYRIGHT "Copyright (c) 2010, Anders Dahnielson.")
SET(IOLA_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
SET(IOLA_LIBDIR lib${LIB_SUFFIX})

## Find packages
SET(FLTK_SKIP_FLUID TRUE)
FIND_PACKAGE(FLTK REQUIRED)

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(MLT REQUIRED mlt-framework)
PKG_CHECK_MODULES(RLOG REQUIRED librlog)

FIND_PACKAGE(Threads REQUIRED)

FIND_PACKAGE(Boost 1.41.0 COMPONENTS filesystem program_options)

FIND_PACKAGE(EXPAT REQUIRED)

# Set up subdirectories...
ADD_SUBDIRECTORY(iola)
