## Find source and headers
FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT) 

## Build
SET(CMAKE_CXX_FLAGS "-D_REENTRANT -DRLOG_COMPONENT=iola")

INCLUDE_DIRECTORIES(
  ${IOLA_SOURCE_DIR}
  ${MLT_INCLUDE_DIRS}
  ${FLTK_INCLUDE_DIR}
  ${Boost_INCLUDE_DIRS}
  ${EXPAT_INCLUDE_DIRS}
  )

LINK_DIRECTORIES(
  ${IOLA_BINARY_DIR}/iola/application
  ${IOLA_BINARY_DIR}/iola/dom
  ${IOLA_BINARY_DIR}/iola/domain
  ${IOLA_BINARY_DIR}/iola/gui
  ${IOLA_BINARY_DIR}/iola/xml
  )

ADD_EXECUTABLE(iola ${SOURCES})
TARGET_LINK_LIBRARIES(iola iolaapplication iolagui ioladomain ioladom iolaxml mlt++ ${MLT_LIBRARIES} ${FLTK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES} ${RLOG_LIBRARIES} ${EXPAT_LIBRARIES})

# Set up subdirectories...
ADD_SUBDIRECTORY(application)
ADD_SUBDIRECTORY(dom)
ADD_SUBDIRECTORY(domain)
ADD_SUBDIRECTORY(gui)
ADD_SUBDIRECTORY(xml)
