## Find source and headers
FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT) 

## Build
SET(CMAKE_CXX_FLAGS "-D_REENTRANT -DRLOG_COMPONENT=iola")

INCLUDE_DIRECTORIES(
  ${IOLA_SOURCE_DIR}
  ${QT_INCLUDE_DIR}
  ${QT_QTOPENGL_DIR}
  ${MLT_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS}
  ${EXPAT_INCLUDE_DIRS}
  )

ADD_EXECUTABLE(iola ${SOURCES})

TARGET_LINK_LIBRARIES(
  iola
  iolaconsumer
  iolagui
  iolamodel
  ioladom
  iolaxml
  mlt++
  ${QT_LIBRARIES}
  ${QT_QTOPENGL_LIBRARIES}
  ${OPENGL_LIBRARIES}
  ${MLT_LIBRARIES}
  ${CMAKE_THREAD_LIBS_INIT}
  ${Boost_LIBRARIES}
  ${RLOG_LIBRARIES}
  ${EXPAT_LIBRARIES}
  ${LIBAO_LIBRARIES}
  )

# Set up subdirectories...
ADD_SUBDIRECTORY(consumer)
ADD_SUBDIRECTORY(dom)
ADD_SUBDIRECTORY(gui)
ADD_SUBDIRECTORY(model)
ADD_SUBDIRECTORY(xml)
