PROJECT(play)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(FLTK_SKIP_OPENGL TRUE)
SET(FLTK_SKIP_FLUID TRUE)
INCLUDE(FindFLTK)

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(MLT REQUIRED mlt-framework)

## Find source and headers

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT) 

## Build

INCLUDE_DIRECTORIES(${MLT_INCLUDE_DIRS} ${FLTK_INCLUDE_DIR})

ADD_EXECUTABLE(play ${SOURCES})
TARGET_LINK_LIBRARIES(play mlt++ ${MLT_LIBRARIES} ${FLTK_LIBRARIES})
