PROJECT(iola)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

## Find packages

SET(FLTK_SKIP_OPENGL TRUE)
SET(FLTK_SKIP_FLUID TRUE)
FIND_PACKAGE(FLTK REQUIRED)

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(MLT REQUIRED mlt-framework)

FIND_PACKAGE(Threads REQUIRED)

FIND_PACKAGE(Boost 1.41.0 COMPONENTS filesystem)

## Find source and headers

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT) 

## Build

SET(CMAKE_CXX_FLAGS -D_REENTRANT)

INCLUDE_DIRECTORIES(${MLT_INCLUDE_DIRS} ${FLTK_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE(iola ${SOURCES})
TARGET_LINK_LIBRARIES(iola mlt++ ${MLT_LIBRARIES} ${FLTK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
