## Find source and headers
FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT) 

## Build
SET(CMAKE_CXX_FLAGS "-D_REENTRANT -DRLOG_COMPONENT=iola")

INCLUDE_DIRECTORIES(${MLT_INCLUDE_DIRS} ${FLTK_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE(iola ${SOURCES})
TARGET_LINK_LIBRARIES(iola mlt++ ${MLT_LIBRARIES} ${FLTK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES} ${RLOG_LIBRARIES})
