## Find source and headers
FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)
FILE(GLOB RESOURCES *.qrc)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
  LIST(SORT RESOURCES)
ENDIF(CMAKE_HAS_SORT) 

## Wrap Qt
QT4_WRAP_CPP(MOC_SOURCES ${HEADERS})
QT4_ADD_RESOURCES(RCC_SOURCES ${RESOURCES})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

## Build
SET(CMAKE_CXX_FLAGS "-DRLOG_COMPONENT=iolagui")
ADD_LIBRARY(iolagui ${SOURCES} ${MOC_SOURCES} ${RCC_SOURCES})
