## Find source and headers
FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT) 

## Wrap Qt
QT4_WRAP_CPP(MOCS_SOURCES ${HEADERS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

## Build
SET(CMAKE_CXX_FLAGS "-DRLOG_COMPONENT=iolagui")
ADD_LIBRARY(iolagui ${SOURCES} ${MOCS_SOURCES})
